package io.javaside.ts4e.core;

public interface BufferChangeConsumer {

    void accept(BufferChange change);
}
