package io.javaside.ts4e.core;

public interface SerialScheduler {

    void submit(Runnable runnable);

}
